<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Servicio Niñeras</string>
    <string name="login">Iniciar Sesión</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="registrar_ninera">Registrar Niñera</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_p">Apellido Paterno</string>
    <string name="apellido_m">Apellido Materno</string>
    <string name="direccion">Domicilio</string>
    <string name="fecha_nac">Fecha de Nacimiento</string>
    <string name="contrasena">Password</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario">Usuario</string>
    <string name="registrar_datos">Registrar Datos</string>
    <string name="email">E-mail</string>
    <string name="vPassword">Verificar Password</string>
    <string name="ver_nineras">Ver Niñeras</string>
    <string name="ver_usuarios">Ver Usuarios</string>
    <string name="num_celular">Número de Celular</string>
    <string name="sexo">Sexo</string>
    <string name="status">Status</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
</resources>
